SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Oracle Plugin:
 - Added validity (VALID|INVALID) field to trigger details tab for triggers.
 - Allow the user to configure whether or not to show the syntax error offset in 
   the SQL Editor.  This feature creates a user-defined function called 
   SQUIRREL_GET_ERROR_OFFSET, which can be disabled.
 - Added ability to recognize "create package" and "create package body" statements.   

PostgreSQL Plugin:

Contributions from Daniel Regli and Yannick Winiger:
- Menu: added a new "PostgreSQL" menu to the object tree and the session menu for
  Postgres specific functionalities.
- Vacuum: added visual (dialog) support for the PostgreSQL-specific VACUUM statement for
  garbage-collecting a selection of tables or the whole database.
- Explain: added an additional SQLResultExecuter to the sql panel that shows
  the query plan of executed statements.

Refactoring Plugin:
 - Don't try to order the list of tables to be dropped (forcing FK info retrieval) 
   when there is only one table being dropped.

  Contributions from Daniel Regli and Yannick Winiger:
  Added new Refactorings (All new refactoring dialogs are now closeable with the ESCAPE key):
    - Rename Table
    - Add/Rename/Drop View
    - Add/Modify/Drop Sequence
    - Add/Drop Index
    - Add/Drop Foreign Key
    - Add/Drop Unique Constraint
    - Add Lookup Table
    - Add Auto Increment
    - Merge Column
    - Merge Table

Refactoring, scripting for Intersystems Cache DB:
  Made Refactoring and scripting functions available for the Intersystems Cache DB by activating its Hibernate dialect.


Bug-Fixes:

Code Completion Plugin:
  Made column completion available for databases/JDBC drivers that support catalogs and/or schemas